<resources>
    <string name="app_name">GoWorkout</string>
    <string name="hint_email" translatable="false">Email</string>
    <string name="text_name">Nome</string>
    <string name="text_mobile">Telémovel</string>
    <string name="text_date">Data de nascimento</string>
    <string name="text_gen">Género</string>
    <string name="text_peso">Peso (kg)</string>
    <string name="text_altura">Altura (cm)</string>
    <string name="hint_password">Password</string>
    <string name="hint_passwordconfirm">Confirmar Password</string>
    <string name="text_registar">Registar</string>
    <string name="text_choosegender">Escolha o seu género</string>
    <string name="text_chooseplan">Escolha o seu plano</string>
    <string name="text_chooseclub">Escolha o seu clube</string>
    <string name="text_enter">Login</string>
    <string name="text_save">Guardar</string>
    <string name="text_invite">Enviar</string>
    <string name="text_cancel">Cancelar</string>
    <string name="text_welcome">Bem-Vindo(a),</string>
    <string name="drawer_open">Open Drawer</string>
    <string name="drawer_close">Close Drawer</string>
    <string name="close_drawer">Close Drawer</string>
    <string name="aulas">Marcar</string>
    <string name="text_register">Não tem conta? Registe-se</string>
    <string name="text_login">Já tem conta? Login</string>
    <string name="text_sair">Sair</string>
    <string name="text_horariofunc">Horário de Funcionamento</string>
    <string name="text_informacoesclube">Informações do seu clube</string>
    <string name="text_news">Noticias</string>
    <string name="edit_profile">Editar Perfil</string>
    <string name="change_password">Mudar Password</string>
    <string name="text_passwordatual">Palavra Passe Atual</string>
    <string name="text_passwordnova">Nova Palavra Passe</string>
    <string name="text_passwordnovaconfirm">Confirmar Nova Palavra Passe</string>
    <string name="feedbackclube">Deixe feedback ao clube</string>
    <string name="feedbacktext">Deixe o seu feedback...</string>
    <string name="text_club">Clube</string>
    <string name="text_morada">Morada</string>
    <string name="text_city">Cidade</string>
    <string name="text_diasuteis">Dias Úteis</string>
    <string name="text_sabado">Sábado</string>
    <string name="text_domingo">Domingo</string>
    <string name="text_feriado">Feriado</string>
    <string name="text_fechado">Fechado</string>
    <string name="text_instrutor">Instrutor</string>
    <string name="feedbacktextapp">Por favor, avalie a nossa app</string>
    <string name="textleave">Tem certeza que deseja sair?</string>
    <string name="textyes">Sim</string>
    <string name="textno">Nao</string>
    <string name="historico">Histórico</string>
    <string name="historicoaulas">Histórico de aulas</string>
    <string name="nextclasses">Próximas aulas</string>
    <string name="text_choosepic">Escolha a foto de perfil</string>
    <string name="text_comomarcar">Como marcar aulas</string>
    <string name="passo_1_text">1 - Clicar no ícone do rodapé "Marcar".</string>
    <string name="passo_2_text">2 - No cabeçalho, selecionar o dia (que é atual por padrão).</string>
    <string name="passo_3_text">3 - Clicar no botão verde para marcar a aula.</string>
    <string name="nota_disponibilidade">Nota: Só é possível marcar aulas se ainda estiverem disponíveis. Para desmarcar, é só clicar no botão vermelho.</string>


    <!-- Frases Motivacionais -->
    <string-array name="frases_motivacionais">
        <item>Acredite em si mesmo e em todo o seu potencial.</item>
        <item>Cada dia é uma nova oportunidade para ser melhor.</item>
        <item>O sucesso é a soma de pequenos esforços repetidos diariamente.</item>
        <item>Nunca desista dos seus sonhos, acredite que são possíveis.</item>
        <item>Grandes conquistas começam com pequenas ações.</item>
    </string-array>

</resources>
