<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_inicio"
            android:title="Home"
            android:icon="@drawable/ichome3"/>
        <item
            android:id="@+id/nav_nextclass"
            android:title="@string/nextclasses"
            android:icon="@drawable/ic_clock64"/>
        <item
            android:id="@+id/nav_marcaraula"
            android:title="@string/aulas"
            android:icon="@drawable/icmarcar1"/>
        <item
            android:id="@+id/nav_historico"
            android:title="@string/historico"
            android:icon="@drawable/ic_history"/>
        <item
            android:id="@+id/nav_perfil"
            android:title="Perfil"
            android:icon="@drawable/ic_perfil"/>
        <item
            android:id="@+id/nav_changepassword"
            android:title="@string/change_password"
            android:icon="@drawable/padlock"/>
    </group>
    <item
        android:id="@+id/nav_logout"
        android:title="@string/text_sair"
        android:icon="@drawable/ic_logout" />
</menu>
