<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditarPerfilActivity"
    android:background="@android:color/black">

    <!-- Linha superior com a seta e o título -->
    <ImageView
        android:id="@+id/back_arrow"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_margin="16dp"
        android:src="@drawable/ic_arrow_back"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/edit_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="16dp"
        android:text="@string/change_password"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        android:gravity="center"
        app:layout_constraintStart_toEndOf="@id/back_arrow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/back_arrow"
        app:layout_constraintBottom_toBottomOf="@id/back_arrow" />

    <!-- Linha cinza abaixo do título com margem superior -->
    <View
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginTop="10dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_title" />


    <!-- Palavra Passe Atual -->
    <TextView
        android:id="@+id/current_password_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="62dp"
        android:textColor="@android:color/white"
        android:text="@string/text_passwordatual"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/current_password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_title"
        app:layout_constraintWidth_percent="0.3" />

    <EditText
        android:id="@+id/current_password"
        android:textColor="@android:color/white"
        android:backgroundTint="@android:color/white"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="62dp"
        android:layout_marginEnd="16dp"
        android:inputType="textPassword"
        android:padding="12dp"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/current_password_label"
        app:layout_constraintTop_toBottomOf="@id/edit_title"
        app:layout_constraintWidth_percent="0.6" />

    <!-- Nova Palavra Passe -->
    <TextView
        android:id="@+id/new_password_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:textColor="@android:color/white"
        android:text="@string/text_passwordnova"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/current_password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/new_password"
        app:layout_constraintWidth_percent="0.3" />

    <EditText
        android:id="@+id/new_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@android:color/white"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:inputType="textPassword"
        android:padding="12dp"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/new_password_label"
        app:layout_constraintTop_toBottomOf="@id/current_password"
        app:layout_constraintWidth_percent="0.6" />

    <!-- Confirmar Nova Palavra Passe -->
    <TextView
        android:id="@+id/confirm_password_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:textColor="@android:color/white"
        android:text="@string/text_passwordnovaconfirm"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/new_password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/confirm_password"
        app:layout_constraintWidth_percent="0.3" />

    <EditText
        android:id="@+id/confirm_password"
        android:backgroundTint="@android:color/white"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:inputType="textPassword"
        android:padding="12dp"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/confirm_password_label"
        app:layout_constraintTop_toBottomOf="@id/new_password"
        app:layout_constraintWidth_percent="0.6" />

    <!-- Botões de Salvar e Cancelar -->
    <Button
        android:id="@+id/save_button"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="6dp"
        android:backgroundTint="#1e1e1e"
        android:text="@string/text_save"
        android:textColor="@android:color/white"
        android:padding="12dp"
        app:layout_constraintTop_toBottomOf="@id/confirm_password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/cancel_button"
        app:layout_constraintWidth_percent="0.4" />

    <Button
        android:id="@+id/cancel_button"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="50dp"
        android:backgroundTint="#1e1e1e"
        android:text="@string/text_cancel"
        android:textColor="@android:color/white"
        android:padding="12dp"
        app:layout_constraintTop_toBottomOf="@id/confirm_password"
        app:layout_constraintStart_toEndOf="@id/save_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_percent="0.4" />

</androidx.constraintlayout.widget.ConstraintLayout>
