<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="0dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="#1e1e1e"
        android:gravity="center"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:padding="16dp">

        <!-- Botão de Fechar (Cruz) dentro do LinearLayout -->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/btnClose"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:src="@android:drawable/ic_menu_close_clear_cancel"
                android:contentDescription="Botão de fechar"
                android:layout_alignParentEnd="true"
                android:layout_alignParentTop="true"
                android:layout_margin="8dp"
                android:clickable="true"
                android:focusable="true" />
        </RelativeLayout>

        <!-- Imagem acima do texto -->

        <ImageView
            android:id="@+id/feedbackImage"
            android:layout_width="174dp"
            android:layout_height="81dp"
            android:layout_marginBottom="8dp"
            android:contentDescription="Imagem de feedback"
            android:src="@drawable/logofeedback" />

        <TextView
            android:id="@+id/tvRatingPrompt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/feedbacktextapp"
            android:textSize="16sp"
            android:textColor="@android:color/white"
            android:layout_marginBottom="8dp" />

        <RatingBar
            android:id="@+id/ratingBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:numStars="5"
            android:stepSize="1.0"
            android:layout_marginBottom="8dp"
            android:progressTint="@android:color/holo_orange_light"
            android:scaleX="0.8"
            android:scaleY="0.8" />


        <EditText
            android:id="@+id/etFeedback"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@android:color/white"
            android:hint="@string/feedbacktext"
            android:inputType="textMultiLine"
            android:layout_marginBottom="8dp" />

        <Button
            android:id="@+id/btnSubmitFeedback"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_invite"
            android:backgroundTint="@color/black"
            android:textColor="@android:color/white"
            android:layout_centerHorizontal="true" />
    </LinearLayout>
</RelativeLayout>
