<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditarPerfilActivity">

    <!-- Linha superior com a seta e o título -->
    <ImageView
        android:id="@+id/back_arrow"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_margin="16dp"
        android:src="@drawable/ic_arrow_back"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/edit_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="16dp"
        android:text="@string/edit_profile"
        android:textSize="16sp"
        android:textStyle="bold"
        android:gravity="center"
        app:layout_constraintStart_toEndOf="@id/back_arrow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/back_arrow"
        app:layout_constraintBottom_toBottomOf="@id/back_arrow" />

    <!-- Linha cinza abaixo do título com margem superior -->
    <View
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginTop="10dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_title" />

    <!-- Imagem de perfil -->
    <ImageView
        android:id="@+id/profile_image"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/circle_background"
        android:contentDescription="Imagem de perfil"
        app:layout_constraintBottom_toTopOf="@+id/edit_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_title" />

    <!-- Texto Nome -->
    <TextView
        android:id="@+id/name_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="Nome:"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/profile_image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/edit_name"
        app:layout_constraintWidth_percent="0.2"
        app:layout_constraintBaseline_toBaselineOf="@id/edit_name" />

    <!-- Campo de nome -->
    <EditText
        android:id="@+id/edit_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:hint="Digite o seu nome"
        android:inputType="textPersonName"
        android:padding="12dp"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/name_label"
        app:layout_constraintTop_toBottomOf="@id/profile_image"
        app:layout_constraintWidth_percent="0.6" />

    <!-- Texto Email -->
    <TextView
        android:id="@+id/email_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="Email:"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/edit_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/edit_email"
        app:layout_constraintWidth_percent="0.2"
        app:layout_constraintBaseline_toBaselineOf="@id/edit_email" />

    <!-- Campo de email -->
    <EditText
        android:id="@+id/edit_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="16dp"
        android:hint="Digite o seu email"
        android:padding="12dp"
        android:inputType="textEmailAddress"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/edit_name"
        app:layout_constraintStart_toEndOf="@id/email_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_percent="0.6" />

    <!-- Texto Telefone -->
    <TextView
        android:id="@+id/phone_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="Telefone:"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/edit_email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/edit_phone"
        app:layout_constraintWidth_percent="0.2"
        app:layout_constraintBaseline_toBaselineOf="@id/edit_phone" />

    <!-- Campo Telefone -->
    <EditText
        android:id="@+id/edit_phone"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="16dp"
        android:hint="Digite o seu telefone"
        android:inputType="phone"
        android:padding="12dp"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@id/phone_label"
        app:layout_constraintTop_toBottomOf="@id/edit_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_percent="0.6" />

    <!-- Texto Data de Nascimento -->
    <TextView
        android:id="@+id/dob_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="Data de Nascimento:"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/edit_phone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/edit_dob"
        app:layout_constraintWidth_percent="0.2"
        app:layout_constraintBaseline_toBaselineOf="@id/edit_dob" />

    <!-- Campo Data de Nascimento -->
    <EditText
        android:id="@+id/edit_dob"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="16dp"
        android:hint="DD/MM/AAAA"
        android:inputType="date"
        android:padding="12dp"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@id/dob_label"
        app:layout_constraintTop_toBottomOf="@id/edit_phone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_percent="0.6" />

    <!-- Texto Género -->
    <TextView
        android:id="@+id/gender_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="Género:"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/edit_dob"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/edit_gender"
        app:layout_constraintWidth_percent="0.2"
        app:layout_constraintBaseline_toBaselineOf="@id/edit_gender" />

    <!-- Campo Género -->
    <Spinner
        android:id="@+id/edit_gender"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="16dp"
        android:padding="12dp"
        app:layout_constraintStart_toEndOf="@id/gender_label"
        app:layout_constraintTop_toBottomOf="@id/edit_dob"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_percent="0.6" />

    <!-- Texto Peso -->
    <TextView
        android:id="@+id/weight_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="Peso (kg):"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/edit_gender"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/edit_weight"
        app:layout_constraintWidth_percent="0.2"
        app:layout_constraintBaseline_toBaselineOf="@id/edit_weight" />

    <!-- Campo Peso -->
    <EditText
        android:id="@+id/edit_weight"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="16dp"
        android:hint="Digite o peso"
        android:inputType="numberDecimal"
        android:padding="12dp"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@id/weight_label"
        app:layout_constraintTop_toBottomOf="@id/edit_gender"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_percent="0.6" />

    <!-- Texto Altura -->
    <TextView
        android:id="@+id/height_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="Altura (cm):"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/edit_weight"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/edit_height"
        app:layout_constraintWidth_percent="0.2"
        app:layout_constraintBaseline_toBaselineOf="@id/edit_height" />

    <!-- Campo Altura -->
    <EditText
        android:id="@+id/edit_height"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="16dp"
        android:hint="Digite a altura"
        android:inputType="numberDecimal"
        android:padding="12dp"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@id/height_label"
        app:layout_constraintTop_toBottomOf="@id/edit_weight"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_percent="0.6" />

    <!-- Botões de Salvar e Cancelar -->

    <!-- Botões de Salvar e Cancelar -->
    <Button
        android:id="@+id/save_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/text_save"
        android:textColor="@android:color/white"
        android:padding="12dp"
        app:layout_constraintTop_toBottomOf="@id/edit_height"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/cancel_button"
        app:layout_constraintWidth_percent="0.4" />

    <Button
        android:id="@+id/cancel_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/text_cancel"
        android:textColor="@android:color/white"
        android:padding="12dp"
        android:backgroundTint="@android:color/darker_gray"
        app:layout_constraintTop_toBottomOf="@id/edit_height"
        app:layout_constraintStart_toEndOf="@id/save_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_percent="0.4" />



</androidx.constraintlayout.widget.ConstraintLayout>
